tests/max_encoded_len_ui/unsupported_variant.stderr
error[E0277]: the trait bound `NotMel: MaxEncodedLen` is not satisfied
 --> tests/max_encoded_len_ui/unsupported_variant.rs:8:9
  |
8 |     NotMel(NotMel),
  |            ^^^^^^ the trait `MaxEncodedLen` is not implemented for `NotMel`
  |
  = help: the following other types implement trait `MaxEncodedLen`:
            bool
            i8
            i16
            i32
            i64
            i128
            u8
            u16
          and $N others
